crates/repovec-core/src/appliance/qdrant_quadlet/log_tests/snapshots/repovec_core__appliance__qdrant_quadlet__log_tests__bearer_assignment_before_section.snap
---
source: crates/repovec-core/src/appliance/qdrant_quadlet/log_tests/mod.rs
expression: events
---
[
    CapturedEvent {
        level: Level(
            Info,
        ),
        target: "repovec_core::qdrant_quadlet",
        fields: {
            "message": "validating qdrant quadlet contract",
        },
    },
    CapturedEvent {
        level: Level(
            Error,
        ),
        target: "repovec_core::qdrant_quadlet",
        fields: {
            "line_number": "1",
            "message": "qdrant quadlet validation rejected property before section",
            "redacted_line": "Bearer <redacted>",
        },
    },
]
