crates/repovec-core/src/appliance/qdrant_quadlet/log_tests/snapshots/repovec_core__appliance__qdrant_quadlet__log_tests__checked_in_qdrant_quadlet_success_events.snap
---
source: crates/repovec-core/src/appliance/qdrant_quadlet/log_tests/mod.rs
assertion_line: 149
expression: events
---
[
    CapturedEvent {
        level: Level(
            Info,
        ),
        target: "repovec_core::qdrant_quadlet",
        fields: {
            "message": "validating checked-in qdrant quadlet",
            "path": "packaging/systemd/qdrant.container",
        },
    },
    CapturedEvent {
        level: Level(
            Info,
        ),
        target: "repovec_core::qdrant_quadlet",
        fields: {
            "message": "validating qdrant quadlet contract",
        },
    },
    CapturedEvent {
        level: Level(
            Info,
        ),
        target: "repovec_core::qdrant_quadlet",
        fields: {
            "message": "qdrant quadlet contract validation succeeded",
        },
    },
]
