crates/repovec-core/src/appliance/qdrant_quadlet/log_tests/snapshots/repovec_core__appliance__qdrant_quadlet__log_tests__incorrect_after_dependency.snap
---
source: crates/repovec-core/src/appliance/qdrant_quadlet/log_tests/mod.rs
expression: events
---
[
    CapturedEvent {
        level: Level(
            Info,
        ),
        target: "repovec_core::qdrant_quadlet",
        fields: {
            "message": "validating qdrant quadlet contract",
        },
    },
    CapturedEvent {
        level: Level(
            Warn,
        ),
        target: "repovec_core::qdrant_quadlet",
        fields: {
            "dependency": "network-online.target",
            "directive": "After",
            "expected_dependency": "repovec-qdrant-api-key.service",
            "message": "qdrant quadlet validation failed: incorrect api key provisioning dependency",
        },
    },
]
