crates/repovec-core/src/appliance/qdrant_quadlet/log_tests/snapshots/repovec_core__appliance__qdrant_quadlet__log_tests__incorrect_api_key_secret.snap
---
source: crates/repovec-core/src/appliance/qdrant_quadlet/log_tests/mod.rs
expression: events
---
[
    CapturedEvent {
        level: Level(
            Info,
        ),
        target: "repovec_core::qdrant_quadlet",
        fields: {
            "message": "validating qdrant quadlet contract",
        },
    },
    CapturedEvent {
        level: Level(
            Warn,
        ),
        target: "repovec_core::qdrant_quadlet",
        fields: {
            "expected_secret": "repovec-qdrant-api-key",
            "expected_target": "QDRANT__SERVICE__API_KEY",
            "message": "qdrant quadlet validation failed: incorrect api key secret",
            "secret": "other-secret,type=env,target=QDRANT__SERVICE__API_KEY",
        },
    },
]
